footer: made to full width, fixed overflow

--- a/less/_footer.less
+++ b/less/_footer.less
@@ -7,10 +7,8 @@
 footer {
 	color: @primary--;
 	width: 100%;
-	max-width: @width;
-	margin: auto;
 	padding: 2rem;
-	overflow: visible;
+	overflow: hidden;
 	
 	&:before {
 		content: "";
